--- a/Broker/src/main/resources/templates/services.html
+++ b/Broker/src/main/resources/templates/services.html
@@ -153,7 +153,7 @@
                  th:data-price="${venue.price}" 
                  th:data-id="${venue.id}" 
                  th:attr="onclick='toggleSelection(this, \'venue\', \'' + ${venue.id} + '\', ' + ${venue.price} + ')'">
-              <img th:src="${venue.image}" th:alt="${venue.name}" class="w-full h-48 object-cover rounded mb-4">
+              <img th:src="${appBaseUrl} + ${venue.images}" th:alt="${venue.name}" class="w-full h-48 object-cover rounded mb-4">
               <h4 class="text-xl font-bold text-gray-800" th:text="${venue.name}"></h4>
               <p class="text-gray-600" th:text="'Price: $' + ${venue.price}"></p>
               <p class="text-gray-600" th:text="'Capacity: ' + ${venue.capacity} + ' guests'"></p>
